--- a/docs/opravila.css
+++ b/docs/opravila.css
@@ -53,8 +53,6 @@ margin: 20px;
 	display: inline-block;
 }
 
-
-
 #navBar{
     margin-top: 170px;
 	width: 60%;
@@ -73,6 +71,7 @@ margin: 20px;
 		background: #2a103c;
 		font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 		color: white;
+		transition: all 0.3s ease;
     }
 	#navBar ul li a:hover{
 		background-color: #695776;
@@ -84,92 +83,237 @@ margin: 20px;
 	#navBar ul li:hover ul{
 	    display: block;
 	}
-	#navBar ul ul {
-	    display: none;
-	    position: absolute;
-	    top: 65px;
-	}
-	#navBar ul ul li{
-	    display: block;
-	}
 
 .container {
-    /*: 500px;
-    height: 400px;
-    text-align: center;
-    background: white;
-    margin: 0 auto;
-    margin-top: 40px;
-    opacity: 0.7;
-    filter: alpha(opacity=70);*/
-
     margin: 40px 0;
     background: white;
     padding: 20px;
     clear: both;
-    opacity: 0.7;
-    filter: alpha(opacity=70);
-    text-align:center;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    height: auto;
+    overflow: hidden;
 }
 
+#navPoOpravilih {
+    width: 50%;
+    text-align: center;
+    background-color: #555;
+    overflow: auto;
+    margin:auto;
+}
+    #navPoOpravilih ul li{
+        display: block;
+    }
+
+
+    #navPoOpravilih ul li a {
+        width: 25%;
+        padding: 20px 0;
+        float: left;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 15px;
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        text-decoration:none;
+
+    }
+
+#navPoOpravilih ul li a:hover {
+    background-color: #000;
+}
+
+#navPoOpravilih ul li a:active {
+    background-color: #695776;
+}
+
+/* The side navigation menu
+#navPoOpravilih {
+    margin-top: 40px;
+    height: 100%; /* 100% Full-height */
+   /* width: 0; /* 0 width - change this with JavaScript */
+   /* position: fixed; /* Stay in place */
+  /*  top: 0;
+    left: 0;
+    background-color: #fbfbfb
+    padding-top: 60px; /* Place content 60px from the top
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+/*
+    #navPoOpravilih ul li{
+            display: block;
+            height: 50px;
+    }
+
+	#navPoOpravilih ul li a{
+            margin-top: 15px;
+            text-decoration: none;
+            padding: 15px;
+            background: #2a103c;
+            font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+            color: white;
+            text-decoration: none;
+            display: block;
+    }*/
+
+/* The navigation menu links
+#navPoOpravilih ul li a{
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}*/
+
+#opravila {
+    margin-top: 15px;
+    margin-left: 100px;
+    float:left;
+    clear: left;
+}
+    #opravila label{
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-size: 15px;
+        color: #0ea7ee;
+        padding: 30px;
+    }
+
 input[type="text"] {
-    height: 40px;
     border: 0;
     outline: 0;
+    font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    font-size: 15px;
     background: transparent;
     border-bottom: 2px solid grey;
+    margin: auto;
 }
+
+
+#Podrocje {
+    margin-top: 20px;
+    margin-left: 100px;
+    float:left;
+    clear: left;
+}
+    #Podrocje label{
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-size: 15px;
+        color: #0ea7ee;
+        padding: 30px;
+
+    }
+    #Podrocje select{
+       background: transparent;
+       padding: 5px;
+       font-size: 15px;
+       line-height: 1;
+       font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+       height: 34px;
+    }
+
+#DueDate {
+    margin-top: 20px;
+    margin-left: 100px;
+
+    clear: left;
+}
+
+    #DueDate label{
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-size: 15px;
+        color: #0ea7ee;
+        padding: 30px;
+
+    }
+
+    #DueDate select{
+       background: transparent;
+       padding: 5px;
+       font-size: 15px;
+       line-height: 1;
+       font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+       height: 34px;
+    }
+
+#Prioriteta {
+    margin-top: 20px;
+    margin-left: 100px;
+    float:left;
+    clear: left;
+}
+    #Prioriteta label {
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-size: 15px;
+        color: #0ea7ee;
+        padding: 30px;
+
+    }
+    #Prioriteta label label{
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-size: 15px;
+        color: black;
+        padding:20px;
+
+    }
+    #Prioriteta form{
+       background: transparent;
+       font-size: 15px;
+       line-height: 1;
+       font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+       height: 34px;
+    }
+
+#notes {
+    margin-top: 20px;
+    margin-left: 100px;
+    clear: left;
+}
+    #notes label{
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-size: 15px;
+        color: #0ea7ee;
+        padding: 30px;
+
+    }
+
+#Add {
+    margin-top: 20px;
+    margin-left: 130px;
+    float:left;
+    clear: left;
+}
+    #Add button {
+        background-color: #2a103c;
+        color: white;
+        padding: 15px;
+        border: none;
+        font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        transition: all 0.3s ease;
+    }
+
+    #Add button:hover{
+		background-color: #695776;
+		box-shadow: 0px 1px 1px #666;
+	}
+
 
 input[type="submit"] {
     height: 40px;
     background-color: #2a103c;
-    font-size: 14px;
+    font-size: 18px;
     outline: none;
     border: 1px solid #333;
     cursor: pointer;
     color: white;
     padding: 10px;
     font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    float: left;
 }
 
 input[type="submit"]:hover {
     background-color: #695776;
 }
-
-#opravila ul {
-    margin: 15px auto 0;
-    padding: 0;
-    width: 545px;
-}
-
-#opravila a {
-    height: 40px;
-    background-color: #2a103c;
-    font-size: 14px;
-    outline: none;
-    border: 1px solid #333;
-    cursor: pointer;
-    color: white;
-    padding: 10px;
-    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-    text-decoration: none;
-}
-
-#opravila a:hover {
-    background-color: #695776;
-}
-
-
-/*
-#background {
-    width: 800px;
-    text-align: center;
-    margin: 30px 0;
-    background: white;
-    clear: both;
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-}*/
 
 #footer{
 	border-bottom: 1px #ccc solid;
