--- a/docs/koledar.css
+++ b/docs/koledar.css
@@ -17,7 +17,12 @@ h1{
 
 }
 h2{
-    font-size: 1.5em; }
+    font-size: 20px;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    font-weight: normal;
+    margin-top:20px;
+    margin-left: 25px;
+    }
 a{
 	color: #2a103c;
 	text-decoration: none;
@@ -28,7 +33,7 @@ a{
 	}
 
 body{
-    font-family: arial;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;;
     font-size: 80%;
     line-height: 1.2em;
     width: 100%;
@@ -40,32 +45,27 @@ body{
 margin: 20px;
 }
 
-.container {
-    width: 500px;
-    height: 400px;
-    text-align: center;
-    background: #2a103c;
-    margin: 0 auto;
-    margin-top: 150px;
+#wrap{
+    background: url(glava.png);
+    height: 200px;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
 }
 
 #logo{
 	width: 35%;
-	margin-top: 40px;
+	margin-top: 170px;
 	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 	display: inline-block;
 }
 
-
-
 #navBar{
-    margin-top: 50px;
+    margin-top: 170px;
 	width: 60%;
 	display: inline-block;
 	text-align: right;
 	float: right;
 }
-
     #navBar ul li{
         display: inline-block;
         height: 50px;
@@ -95,21 +95,78 @@ margin: 20px;
 	#navBar ul ul li{
 	    display: block;
 	}
-/*
-#background {
-     margin: 30px 0;
-     background: white;
-     padding: 20px;
-     clear: both;
-     opacity: 0.5;
-     filter: alpha(opacity=50);
-*/
+
+.container {
+    margin: 40px 5px;
+    background-color: white;
+    padding: 20px;
+    clear: both;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    height: 400px;
+    overflow: hidden;
+    width: 36%;
+    display: inline-block;
+}
+
+.container2 {
+    margin: 40px 5px;
+    background-color: white;
+    padding: 20px;
+    clear: both;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    height: 400px;
+    overflow: hidden;
+    width: 21%;
+    display: inline-block;
+
+}
+
+.container3 {
+    margin: 40px 5px;
+    background-color: white;
+    padding: 20px;
+    clear: both;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    height: 400px;
+    overflow: hidden;
+    width: 30%;
+    display: inline-block;
+
+}
+
+#calendarDay {
+    margin: 20px auto;
+}
+
+    #calendarDay tr{
+        margin-left: 20px;
+        line-height:30px;
+        text-align:center;
+        cursor: pointer;
+    }
+    #calendarDay #calendar-frame2 td.today{
+        background:#56c1f3;
+        color:#fff;
+    }
+    #calendarDay th {
+        border:1px solid white;
+        background-color: #e6e6e6;
+
+    }
+    #calendarDay th:hover {
+        background:#e3ebef;
+        color:#666666;;
+    }
+
 
 #calendar {
-    margin:100px auto;
+    margin: 20px auto;
     display:table;
 }
-    #calendar .header {
+    #calendar .header, #calendarDay .header {
     cursor:default;
     background: #0ea7ee;
     height: 50px;
@@ -118,35 +175,36 @@ margin: 20px;
     text-align: center;
     }
 
-    #calendar .header span {
+    #calendar .header span,#calendarDay .header span{
         display:inline-block;
         line-height:50px;
     }
-    #calendar .header .button {
+    #calendar .header .button,#calendarDay .header .button {
         width:24px;
         text-align:center;
         position:absolute;
     }
-    #calendar .header .left.button {
+    #calendar .header .left.button,#calendarDay .header .left.button {
         left:0;
         border-right:1px solid #0ea7ee;
     }
-    #calendar .header .right.button {
+    #calendar .header .right.button,#calendarDay .header .right.button {
         right:0;
         top:0;
         border-left:1px solid #0ea7ee;
     }
-    #calendar .header .button:hover {
+    #calendar .header .button:hover, #calendarDay .header .button:hover {
         background: #56c1f3;
+        cursor: pointer;
     }
     #calendar .header .month-year {
         text-align: center;
     }
-    #calendar table {
-    background:#fff;
-    border-collapse:collapse;
+    #calendar table, #calendarDay table {
+        background:#fff;
+        border-collapse:collapse;
     }
-    #calendar td {
+    #calendar td{
         color:#2a103c;
         width:30px;
         height:30px;
@@ -154,6 +212,7 @@ margin: 20px;
         text-align:center;
         border:1px solid #e6e6e6;
         cursor:default;
+        cursor: pointer;
     }
     #calendar #days td {
         height:26px;
@@ -164,22 +223,39 @@ margin: 20px;
     #calendar #days td:not(:last-child) {
         border-right:1px solid #fff;
     }
-    #calendar #calendar-frame td.today {
+    #calendar #calendar-frame td.today{
         background:#56c1f3;
         color:#fff;
     }
     #calendar #calendar-frame td:not(.nil):hover {
         background:#e3ebef;
         color:#666666;
-
     }
     #calendar #calendar-frame table.current {
-    float:left;
+        float:left;
     }
     #calendar #calendar-frame table.temp {
         position:absolute;
     }
 
+
+#MyTODOlist ul li{
+    margin-top:10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+    position: relative;
+    padding: 5px;
+    font-size: 15px;
+    transition: 0.2s;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    list-style-type: none;
+    font-weight: bold;
+    color:#6a6a6a;
+}
+    #MyTODOlist ul li:hover{
+        text-shadow: 1px 1px #bebebe;
+    }
 
 
 #footer{
