--- a/docs/uporabnik.css
+++ b/docs/uporabnik.css
@@ -97,41 +97,14 @@ body{
 	    display: block;
 	}
 
-#form p {
-    margin-top: 10px;
-    font-size: 15px;
-}
-
-input[type="text"] {
-    margin: auto;
-    font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-    font-size: 15px;
-    padding: 5px;
-}
-input[type="password"] {
-    margin: auto;
-    font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-    font-size: 15px;
-    padding: 5px;
-}
-
-#prijavi {
-    margin-top: 10px;
-}
-
-input[type="button"]{
-    margin: auto;
-    background-color: #2a103c;
-    color: white;
-    padding: 15px;
-    border: none;
-    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-    transition: all 0.3s ease;
-    cursor: pointer;
-}
-input[type="button"]:hover{
-    background-color: #695776;
-    box-shadow: 1px 1px #bebebe;
+#background {
+     margin: 30px 0;
+     background: white;
+     padding: 20px;
+     clear: both;
+     opacity: 0.5;
+     filter: alpha(opacity=50);
+     text-align: center;
 }
 
 
