--- a/docs/ToDo.css
+++ b/docs/ToDo.css
@@ -11,12 +11,22 @@ h1, h2, h3, h4{
 	line-height: 1.1em;
 	margin: 0 0 .5em 0;
 }
+h1, h2, h3, h4{
+    color: #0ea7ee;
+	line-height: 1.1em;
+	margin: 0 0 .5em 0;
+}
 h1{
     font-size: 2.0em;
 
 }
 h2{
-    font-size: 1.5em; }
+    font-size: 20px;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    font-weight: normal;
+    margin-top:10px;
+    margin-left: 25px;
+    }
 a{
 	color: #2a103c;
 	text-decoration: none;
@@ -27,29 +37,17 @@ a{
 	}
 
 body{
-    font-family: arial;
-    font-size: 80%;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    font-size: 12px;
     line-height: 1.2em;
     width: 100%;
-    margin: 0;
+    margin:0;
     background: #eee;
 }
 
 #page{
-
-
-    margin: 20px;
+margin: 20px;
 }
-/*
-.container {
-     margin: 40px 0;
-    background: white;
-    padding: 20px;
-    clear: both;
-    opacity: 0.7;
-    filter: alpha(opacity=70);
-    text-align:center;
-}*/
 
 #wrap{
     background: url(glava.png);
@@ -71,9 +69,7 @@ body{
 	display: inline-block;
 	text-align: right;
 	float: right;
-
 }
-
     #navBar ul li{
         display: inline-block;
         height: 50px;
@@ -84,15 +80,14 @@ body{
 		background: #2a103c;
 		font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 		color: white;
-
-
+		transition: all 0.3s ease;
     }
 	#navBar ul li a:hover{
 		background-color: #695776;
 		box-shadow: 0px 1px 1px #666;
 	}
 	#navBar ul li a:active{
-	    background-color: #695776;
+	    background-color: #2a103c;
 	}
 	#navBar ul li:hover ul{
 	    display: block;
