--- a/docs/preglejOpravila.css
+++ b/docs/preglejOpravila.css
@@ -12,14 +12,14 @@ h1, h2, h3, h4{
 }
 h1{
     font-size: 2.0em;
-
+    text-align: left;
 }
 h2{
     font-size: 20px;
     font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
     font-weight: normal;
     text-align: center;
-    }
+   }
 a{
 	color: #2a103c;
 	text-decoration: none;
@@ -36,7 +36,7 @@ body{
     width: 100%;
     margin:0;
     background: #eee;
-    text-align: center;
+
 }
 
 #page{
@@ -178,7 +178,9 @@ margin: 20px;
     #Datumi li:hover,#Prioritete li:hover,#Podrocje li:hover{
         text-shadow: 1px 1px #bebebe;
     }
-
+#Datumi p, #Prioritete p, #Podrocje p {
+    text-align: center;
+}
 
 #footer{
 	border-bottom: 1px #ccc solid;
