--- a/docs/uporabnik.css
+++ b/docs/uporabnik.css
@@ -7,8 +7,6 @@ p{ line-height: 1em; }
 
 h1, h2, h3, h4{
     color: #0ea7ee;
-    font-family:
-	font-weight: normal;
 	line-height: 1.1em;
 	margin: 0 0 .5em 0;
 }
@@ -134,7 +132,7 @@ margin: 20px;
     clear: both;
     opacity: 0.6;
     filter: alpha(opacity=60);
-    height: 300px;
+    height: 400px;
     overflow: hidden;
     width: 45%;
     display: inline-block;
@@ -146,7 +144,7 @@ margin: 20px;
     clear: both;
     opacity: 0.6;
     filter: alpha(opacity=60);
-    height: 300px;
+    height: 400px;
     overflow: hidden;
     width: 45%;
     display: inline-block;
@@ -155,6 +153,8 @@ margin: 20px;
 canvas {
     margin: auto;
     display: block;
+    background: linear-gradient(to bottom, grey, white);
+
 }
 
 
@@ -175,7 +175,7 @@ canvas {
     #opravilaDone li:hover, #opravila li:hover{
         text-shadow: 1px 1px #bebebe;
     }
-}
+
 
 #footer{
 	border-bottom: 1px #ccc solid;
