--- a/docs/django toDo/mysite/toDo/static/toDo/css/ToDo.css
+++ b/docs/django toDo/mysite/toDo/static/toDo/css/ToDo.css
@@ -44,20 +44,22 @@ body{
     background: #eee;
 }
 
+
 #page{
 	margin: 0;
 }
 
 #wrap{
-    background: grey;
+    background: #d9c6c9;
     height: 80px;
     opacity: 0.7;
     filter: alpha(opacity=70);
 }
 
 #logo{
-	margin-left: 1%;
-	width: 35%;
+    margin-left: 1%;
+	width: 5px;
+	height: 5px;
 	margin-top: 50px;
 	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 	display: inline-block;
@@ -78,17 +80,19 @@ body{
 	#navBar ul li a{
 	    text-decoration: none;
 		padding: 15px;
-		background: #2a103c;
+		background: #666;
 		font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 		color: white;
 		transition: all 0.3s ease;
     }
 	#navBar ul li a:hover{
-		background-color: #695776;
+		background-color: grey;
+		color: black;
 		box-shadow: 0px 1px 1px #666;
 	}
 	#navBar ul li a:active{
-	    background-color: #2a103c;
+	    background-color: grey;
+		
 	}
 	#navBar ul li:hover ul{
 	    display: block;
