--- a/docs/django toDo/mysite/toDo/templates/toDo/home.html
+++ b/docs/django toDo/mysite/toDo/templates/toDo/home.html
@@ -1,9 +1,3 @@
-{% extends "toDo/header.html "%}
-
-{% block content %}
-
-{% include "toDo/includes/htmlsnippet.html" %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,21 +5,23 @@
     <meta charset="UTF-8">
     <meta name="avtor" content="Lea" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <title>To-do list</title>
-    <link rel="stylesheet" href="ToDo.css" type="text/css" />
+    <title>Seznam opravil</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'toDo/css/ToDo.css' %}" type="text/css" />
 </head>
 
 <body>
 	<div id="page">
         <div id="wrap">
             <div id="logo">
-                <h1><a href="index.html">Home</a></h1>
+                <img src="{% static "toDo/img/home.svg" %}" href="{%url 'index' %}"</i>
+				
             </div>
 
             <div id="navBar">
                 <ul>
                     <!--<li><a href="index.html">Home</a></li>-->
-                    <li><a href="registracija.html">Registriraj se</a></li>
+                    <li><a href="{%url 'registracija' %}">Registriraj se</a></li>
 					<li><a onclick="return showUser(this)">Prijavi se</a></li>
                 </ul>
             </div>
@@ -74,4 +70,3 @@
 </body>
 </html>
 
-{% endblock %}
